# hyperfuel-client-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/asset-id/: Cargo.toml  README.md
examples/asset-id/src/: main.rs
examples/predicate-root/: Cargo.toml  README.md
examples/predicate-root/src/: main.rs
examples/simple-logs/: Cargo.toml  README.md
examples/simple-logs/src/: main.rs
examples/stream-logs/: Cargo.toml  README.md
examples/stream-logs/src/: main.rs
hyperfuel-client/: Cargo.toml
hyperfuel-client/src/: column_mapping.rs  config.rs  filter.rs  from_arrow.rs  lib.rs  parquet_out.rs  parse_response.rs  simple_types.rs  stream.rs  types.rs  util.rs
hyperfuel-client/src/decoder/: mod.rs
hyperfuel-client/tests/: api_test.rs
hyperfuel-format/: Cargo.toml
hyperfuel-format/src/: error.rs  lib.rs
hyperfuel-format/src/types/: fixed_size_data.rs  input_type.rs  mod.rs  output_type.rs  quantity.rs  receipt_type.rs  transaction_status.rs  transaction_type.rs
hyperfuel-format/tests/: deserialize_json.rs
hyperfuel-net-types/: Cargo.toml  Makefile  build.rs  hyperfuel_net_types.capnp
hyperfuel-net-types/src/: lib.rs
hyperfuel-net-types/src/__generated__/: hyperfuel_net_types_capnp.rs  mod.rs
hyperfuel-schema/: Cargo.toml
hyperfuel-schema/src/: lib.rs  util.rs
