[package]
name = "hyperfuel-client"
version = "2.0.0"
edition = "2021"
description = "client library for Envio's HyperSync support of the Fuel Network"
license = "MIT"

[dependencies]
anyhow = "1"
url = { version = "2", features = ["serde"] }
arrow2 = { version = "0.18", features = [
    "io_json",
    "io_ipc",
    "io_ipc_compression",
    "io_parquet_zstd",
    "io_parquet_lz4",
    "io_parquet",
    "compute_boolean",
    "compute_filter",
] }
serde_json = "1"
capnp = "0.18"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
] }
log = "0.4"
fastrange-rs = "0.1"
rand = "0.8"
tokio-util = { version = "0.7.10", features = ["compat"] }
alloy-dyn-abi = "0.5.0"
alloy-json-abi = "0.5.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

hyperfuel-net-types = { package = "hyperfuel-net-types", path = "../hyperfuel-net-types", version = "2.0.0" }
hyperfuel-format = { package = "hyperfuel-format", path = "../hyperfuel-format", version = "2.0.0" }
hyperfuel-schema = { package = "hyperfuel-schema", path = "../hyperfuel-schema", version = "2.0.0" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dev-dependencies]
maplit = "1"
hex-literal = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
