[package]
name = "hyperfuel-format"
version = "4.0.1"
edition = "2021"
description = "fuel network format library"
license = "MPL-2.0"

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
faster-hex = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_test = "1"
hex-literal = "0.4"
serde_json = "1"
