[package]
name = "hyperfuel-net-types"
version = "4.0.3"
edition = "2021"
description = "hyperfuel types for transport over network"
license = "MPL-2.0"

[dependencies]
capnp = "0.19"
serde = { version = "1", features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }

hyperfuel-format = { path = "../hyperfuel-format", version = "4" }

[build-dependencies]
capnpc = "0.19"
