[package]
name = "asset-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperfuel-client = { path = "../../hyperfuel-client" }
hyperfuel-net-types = { path = "../../hyperfuel-net-types" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
