[package]
name = "simple-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
hyperfuel-client = { path = "../../hyperfuel-client" }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
